Fixed article paragraph spacing.

--- a/_sass/layout/_article.scss
+++ b/_sass/layout/_article.scss
@@ -38,6 +38,10 @@
             }
         }
 
+        p {
+            margin-bottom: $spacer*3;
+        }
+
         img {
             max-width: 100%;
             height: auto;
